[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]

name = "day02"
path = "src/day02.rs"

[[bin]]

name = "day01"
path = "src/day01.rs"

[[bin]]

name = "day03"
path = "src/day03.rs"


[[bin]]

name = "day04"
path = "src/day04.rs"